--- a/ch15-subclassing-tableviewcells/Homepwner/Homepwner/Storyboard-iPad.storyboard
+++ b/ch15-subclassing-tableviewcells/Homepwner/Homepwner/Storyboard-iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="z4m-pA-Hvf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="z4m-pA-Hvf">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -60,9 +60,6 @@
                                             <state key="normal">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
-                                            <connections>
-                                                <action selector="showImage:" destination="RH2-Yv-c7r" eventType="touchUpInside" id="vIP-Pa-QJf"/>
-                                            </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -85,6 +82,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="Z6l-A6-ZSq" id="eKw-8N-DUP"/>
                                     <outlet property="serialLabel" destination="sOR-QT-chQ" id="QeS-W3-1e7"/>
+                                    <outlet property="thumbnailButton" destination="rVe-02-Kyb" id="ItL-tb-Uqf"/>
                                     <outlet property="thumbnailView" destination="zN5-LH-mz7" id="ycv-zw-ket"/>
                                     <outlet property="valueLabel" destination="QyW-hf-see" id="bdJ-dm-16Z"/>
                                     <segue destination="VcU-ml-ehV" kind="push" identifier="Show detail view of BNRItem" id="DPk-xD-hES"/>
