--- a/ch18-nsuserdefaults/Whereami/Whereami/Base.lproj/Main.storyboard
+++ b/ch18-nsuserdefaults/Whereami/Whereami/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -70,6 +70,7 @@
                     <connections>
                         <outlet property="activityIndicator" destination="bwC-zC-Pjr" id="zK3-cx-tK5"/>
                         <outlet property="locationTitleField" destination="aiD-60-ouU" id="4gn-OR-6mB"/>
+                        <outlet property="mapTypeSegmentedControl" destination="RmI-pd-8Y7" id="G10-di-cgt"/>
                         <outlet property="worldView" destination="DBb-Ln-kL2" id="uhz-0Z-QvN"/>
                     </connections>
                 </viewController>
